ultimo commint del branch original
aqui voy a crear el branch de monedero, intentando poder controlar al 100% el monedero solamente. sin el validador.

--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -259,3 +259,12 @@ li{
   /* text-shadow: 1px 1px 1px #ccc; */
   /* font-size: 1em; */
 }
+.interface_button{
+  margin:5px;
+}
+.interface_label{
+  margin:5px;
+  font-size: 28px;
+}
+.btn:hover{background-color:orange;}
+.btn:focus{background-color:red;}
