--- a/src/views/remesas/iniciar_remesa.hbs
+++ b/src/views/remesas/iniciar_remesa.hbs
@@ -10,10 +10,14 @@ $(document).ready(function() {
     socket.emit('finish', "finalizando remesa");
     window.clearTimeout(counter);
     window.clearTimeout(counter2);
-    window.location.replace("/finish/"+qty_billx);
+    //window.location.replace("/finish/"+qty_billx);
+  //  socket.emit('finish');
     //window.location.href("/finish/"+qty_billx);
   //  window.location.replace("/finish");
   //  next_page();
+  });
+  socket.on('finish', function(msg) {
+  window.location.replace("/finish/"+qty_billx);
   });
   //para cancelar el pago de una remesa, solo antes de iniciarse
   $("#cancelling").click(function() {
@@ -141,13 +145,13 @@ function start_timer(){
 
 
     };
-function  next_page(){
-const Http = new XMLHttpRequest();
-const url='http://192.168.1.18:3000/finish/'+qty_billx;
-Http.open("GET", url);
-Http.send();
-window.location.replace("/finish");
-};
+    // function  next_page(){
+    //   const Http = new XMLHttpRequest();
+    //   const url='http://192.168.1.18:3000/finish/'+qty_billx;
+    //   Http.open("GET", url);
+    //   Http.send();
+    //   window.location.replace("/finish");
+    // };
 </script>
 
 <body oncontextmenu="return false">
