--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -195,12 +195,11 @@ li{
   grid-row: 1/4;
   text-align: left;
 }
-
-
 .grupo{
   grid-column: 1/5;
   min-height:350px;
   /*grid-row: auto; */
+  /* min-width: 100%; */
   background-color:  rgba(8, 8, 8, 1);
   border: 1.5px solid gray;
   border-radius: 15px;
@@ -212,6 +211,20 @@ li{
   grid-gap:1em;
   background-image: url("../img/bg_image4.jpg");
 }
+.keypad{
+  grid-column: span 1;
+  text-align: center;
+  font-size: 22px;
+  background-color:  rgba(8, 8, 8, 1);
+  border: 1.5px solid gray;
+  padding: 10px;
+  border-radius: 15px;
+  display: grid;
+  grid-template-columns: 1fr;
+  /* grid-template-rows: 1fr 1fr 1fr; */
+  grid-gap: 1em;
+  grid-row-gap: 1em;
+}
 .btn{
   border-radius: 12px;
   /*  */
@@ -220,7 +233,8 @@ li{
   color:#fff;
   text-decoration: none;
   text-align: center;
-  padding: 1.3rem 1.3rem;
+  padding: 0.9rem 1.3rem;
+  /* padding-left: 15px; */
   border: 0;
   shadow: 0 1px 5px rgba(104,104,104,0.8);
   box-shadow:0px 2px 4px rgba(104,104,104,0.8);
@@ -258,4 +272,120 @@ li{
   color: #53d000;
   /* text-shadow: 1px 1px 1px #ccc; */
   /* font-size: 1em; */
+}
+.interface_button{
+  margin:5px;
+}
+.interface_label{
+  margin:5px;
+  font-size: 28px;
+}
+.btn:hover{background-color:orange;}
+.btn:focus{background-color:red;}
+.graph{
+  grid-column: 1/2;
+  /* grid-rows: 2/4; */
+  background-color: rgba(8, 8, 8, 1);
+  border: 1.5px solid gray;
+  padding: 10px;
+  border-radius: 15px;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  /* align-self: center; */
+}
+.graph2{
+  grid-column: 1/3;
+  /* grid-rows: 2/4; */
+  background-color: rgba(8, 8, 8, 1);
+  border: 1.5px solid gray;
+  padding: 10px;
+  border-radius: 15px;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  /* align-self: center; */
+}
+.totales{
+  grid-column: 3/5;
+  text-align: center;
+  font-size: 22px;
+  background-color:  rgba(8, 8, 8, 1);
+  border: 1.5px solid gray;
+  padding: 10px;
+  border-radius: 15px;
+  display: grid;
+  grid-template-columns: 1fr;
+  /* grid-template-rows: 1fr 1fr 1fr; */
+  grid-gap: 1em;
+  grid-row-gap: 1em;
+}
+.totales2{
+  grid-column: 4/5;
+  text-align: center;
+  /* font-size: 22px; */
+  background-color:  rgba(8, 8, 8, 1);
+  border: 1.5px solid gray;
+  /* padding: 10px; */
+  border-radius: 15px;
+  display: grid;
+  grid-template-columns: 1fr;
+  /* grid-template-rows: 1fr 1fr 1fr; */
+  grid-gap: 1em;
+  grid-row-gap: 1em;
+}
+.keypad2{
+  grid-column: span 1;
+  text-align: center;
+  font-size: 22px;
+  background-color:  rgba(8, 8, 8, 1);
+  border: 1.5px solid gray;
+  padding: 10px;
+  border-radius: 15px;
+  display: grid;
+  grid-template-columns: 1fr;
+  /* grid-template-rows: 1fr 1fr 1fr; */
+  grid-gap: 1em;
+  grid-row-gap: 1em;
+}
+.footer{
+  background-color: rgba(8, 8, 8, 1);
+  border: 1.5px solid gray;
+  border-radius: 10px;
+  grid-column: 1/5;
+  font-size: 12px;
+  text-align: center;
+  padding: 1em;
+}
+.subtitle{
+  font-size: 26px;
+  text-align: center;
+  padding: 0.3em;
+}
+.amount{
+  color:rgb(138, 138, 138);
+  font-size: 30px;
+  text-align: center;
+  padding: 0.4em;
+ padding-bottom: 30px;
+}
+.btn_level{
+  border-radius: 12px;
+  /*  */
+  /* rgb(124, 123, 129) */
+  background-color:rgba(12, 51, 247, 0.75);
+  color:#fff;
+  text-decoration: none;
+  text-align: center;
+  padding: 0!important;
+
+  /* padding-left: 15px; */
+  border: 0;
+  shadow: 0 1px 5px rgba(104,104,104,0.8);
+  box-shadow:0px 2px 4px rgba(104,104,104,0.8);
+  align-items: center;
+  align-self: center;
+  align-content: center;
+  /* height: minmax(100px,300px); */
+  font-size: 18px;
 }
