--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -13,11 +13,13 @@
   <script type="text/javascript" src="../jquery/jquery.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="css/tambox.css">
-  <link rel="stylesheet" type="text/css" href="../css/tambox.css">
+  <!-- <link rel="stylesheet" type="text/css" href="../css/tambox.css"> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js" type="text/javascript"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script> -->
 
-  <script src="/chart/Chart.js"></script>
+  <script src="js/Chart.js"></script>
   <link href="css/fontawesome/css/all.css" rel="stylesheet" type="text/css">
-  <link href="..css/fontawesome/css/all.css" rel="stylesheet" type="text/css">
+  <!-- <link href="..css/fontawesome/css/all.css" rel="stylesheet" type="text/css"> -->
 
   <script type="text/javascript">
     var socket = io();
