--- a/src/views/registradora.hbs
+++ b/src/views/registradora.hbs
@@ -145,25 +145,81 @@ function clear_system_running_indicator(){
 
     <div class="titulo">
       <div class="btn" id='main'><i class="fas fa-long-arrow-alt-left  fa-1x"></i></div>
-      <div>Configuración</div>
+      <div>Registradora</div>
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
     </div>
-    <div class="grupo">
-      <div></div>
-      <div class="btn" id='cuadre_diario'><i class="far fa-clipboard fa-4x"></i> Cuadre diario</div>
-      <div class="btn" id='montos'><i class="fas fa-chart-bar fa-4x"></i> Cifras Generales</div>
-      <div class="btn" id='remesa_hermes'><i class="fas fa-money-bill-alt fa-4x"></i>Remesa Hermes</div>
-      <div class="btn" id='info'><i class="fas fa-info fa-4x"></i>Información General</div>
-      <!-- <div class="btn" id='sincro'><i class="fab fa-hubspot fa-4x"></i>sincronización Manual</div> -->
-      <div></div>
-      <div></div>
-      <div class="btn" id='test'><i class="fab fa-mixcloud fa-4x"></i>testy</div>
-      <div class="btn" id='reset'><i class="fas fa-random fa-4x"></i>reset</div>
-      <div class="btn" id='reset_counters'><i class="fas fa-random fa-4x"></i>reset Counters</div>
-      <!-- <div class="btn" id='update'><i class="fas fa-random fa-4x"></i>update</div> -->
-      <div class="btn" id='test-over'><i class="fab fa-mixcloud fa-4x"></i>test over</div>
+    <!-- <div class="wrapperx"> -->
+<!-- <div></div> -->
+<!-- <div class="titulo">
+  <div></div>
+  <div>Cantidad de billetes para vuelto</div>
+  <div></div>
+</div> -->
+<div class="graph">
+  <div class="chart">
+    <section>  <canvas id="myChart" width="100" height="100"></canvas> </section>
+  <script>
+      var ctx = document.getElementById("myChart").getContext('2d');
+      var myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: ["10PEN", "20PEN", "50PEN", "100PEN", "200PEN"],
+            datasets: [{
+                label: '# de Billetes',
+                data: [0, 0, 0, 0, 0],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255,99,132,1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero:true
+                    }
+                }]
+            }
+        }
+      });
+  </script>
+  </div>
+</div>
+<div class="keypad">
+  <a href="#" class="btn" id='lock'>+</a>
+  <a href="#" class="btn" id='unlock'>-</a>
+  <a href="#" class="btn" id='bar_code'>Borrar</a>
+</div>
+<div class="totales">
+    <div class="resumen">
+    <div class="subtitle">Total:</div>
+    <div class="amount" id="total_amount">S/.000.00</div>
+    <a href="#" class="btn" id='actualizar'>Pagar</a>
+  </div>
+  </div>
+<div class="footer">
+  Elaborado por EC-HOME AUTOMATION PERU S.A.C
 
-    </div>
+    <!-- </div>
+    <div id="message">
+    <ol>
+    </ol>
+    </div> -->
+
+</div>
+<!-- </div> -->
   </div>
   <div id="message">
     <ol></ol>
