--- a/src/views/configuracion/configuracion.hbs
+++ b/src/views/configuracion/configuracion.hbs
@@ -157,11 +157,11 @@ function clear_system_running_indicator(){
       <!-- <div class="btn" id='sincro'><i class="fab fa-hubspot fa-4x"></i>sincronización Manual</div> -->
       <div></div>
       <div></div>
-      <div class="btn" id='test'><i class="fab fa-mixcloud fa-4x"></i>testy</div>
-      <div class="btn" id='reset'><i class="fas fa-random fa-4x"></i>reset</div>
-      <div class="btn" id='reset_counters'><i class="fas fa-random fa-4x"></i>reset Counters</div>
+      <!-- <div class="btn" id='test'><i class="fab fa-mixcloud fa-4x"></i>testy</div> -->
+      <!-- <div class="btn" id='reset'><i class="fas fa-random fa-4x"></i>reset</div> -->
+      <!-- <div class="btn" id='reset_counters'><i class="fas fa-random fa-4x"></i>reset Counters</div> -->
       <!-- <div class="btn" id='update'><i class="fas fa-random fa-4x"></i>update</div> -->
-      <div class="btn" id='test-over'><i class="fab fa-mixcloud fa-4x"></i>test over</div>
+      <!-- <div class="btn" id='test-over'><i class="fab fa-mixcloud fa-4x"></i>test over</div> -->
 
     </div>
   </div>
