--- a/src/views/configuracion/informacion_general/info.hbs
+++ b/src/views/configuracion/informacion_general/info.hbs
@@ -62,13 +62,13 @@ function clear_system_running_indicator(){
       <!-- <div>Mac address</div>
       <div>Ip local</div> -->
       <div>
-<p>Tebs_barcode:{{tebs}}</p>
-<p>relesase version:{{release}}</p>
-
-<p>machine_ip:{{given_ip}}</p>
-<p>machine port:{{given_port}}</p>
-<p>developer:{{developer}}</p>
-<p>support concact:{{support}}</p>
+      <p>Numero de Serie validador: {{machine_sn}}</p>
+      <p>Tebs_barcode:{{tebs}}</p>
+      <p>OS version:{{release}}</p>
+      <p>Direccion IP:{{given_ip}}</p>
+      <p>Puerto de red:{{given_port}}</p>
+      <p>Creado Por:{{developer}}</p>
+      <p>Soporte Técnico:{{support}}</p>
       </div>
       <div></div>
       <div class="btn volver" id='UC'><i class="fas fa-lock-open fa-3x"></i></div>
