--- a/src/views/hopper/niveles_hopper.hbs
+++ b/src/views/hopper/niveles_hopper.hbs
@@ -129,8 +129,8 @@ function update_total(data) {
     total=total+parseInt(data[1])*0.2;
     total=total+parseInt(data[2])*0.5;
     total=total+parseInt(data[3])*1;
-    // total=total+parseInt(data[4])*2;
-    // total=total+parseInt(data[5])*5;
+    total=total+parseInt(data[4])*2;
+    total=total+parseInt(data[5])*5;
     console.log(total);
     $('#total_amount').html(total);
 }
