--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,7 +29,12 @@
   <script type="text/javascript">
     var socket = io();
     $(document).ready(function() {
-
+      socket.on('iniciando', function(msg) {
+        console.log("por resetear");
+        setTimeout(function () {
+          window.location.replace("/");
+        }, 5000);
+        });
     });
   </script>
 </head>
