--- a/src/views/configuracion/configuracion.hbs
+++ b/src/views/configuracion/configuracion.hbs
@@ -2,6 +2,7 @@
 var socket = io();
 //var to_TBM = io.connect( 'http://tambox.ddns.net:4000' );
 var to_TBM = io.connect( 'https://tbm-cloud.herokuapp.com' );
+// Require child_process
 
 $(document).ready(function(){
 //  setTimeout(function(){window.location.replace("/");},10000);
@@ -30,6 +31,8 @@ $(document).ready(function(){
   });
   $("#reset").click( function(){
    socket.emit('reset',"reseteando validador");
+   // reboot.js
+   // Reboot computer
   });
   $("#reset_counters").click( function(){
    socket.emit('reset_counters',"reseteando contador");
@@ -57,6 +60,9 @@ $(document).ready(function(){
     $('#overlay, #overlay-back').fadeOut(500);
   });
 });
+
+
+
 function display_message(mes_to_display){
   document.getElementById("message").innerHTML=mes_to_display;
   setTimeout(clear_message,4000);
@@ -158,7 +164,7 @@ function clear_system_running_indicator(){
       <div></div>
       <div></div>
       <!-- <div class="btn" id='test'><i class="fab fa-mixcloud fa-4x"></i>testy</div> -->
-      <!-- <div class="btn" id='reset'><i class="fas fa-random fa-4x"></i>reset</div> -->
+      <div class="btn" id='reset'><i class="fas fa-random fa-4x"></i>reset</div>
       <!-- <div class="btn" id='reset_counters'><i class="fas fa-random fa-4x"></i>reset Counters</div> -->
       <!-- <div class="btn" id='update'><i class="fas fa-random fa-4x"></i>update</div> -->
       <!-- <div class="btn" id='test-over'><i class="fab fa-mixcloud fa-4x"></i>test over</div> -->
