--- a/public_old/setup_old.hbs
+++ b/public_old/setup_old.hbs
@@ -13,12 +13,12 @@
 ////////////////////////////////////////////////////
 
 ////////////////////////////////////////////////////
-    $("#enable").click(function(){
-      socket.emit('enable_validator');
-    });
-    socket.on('enable_validator', function(msg) {
-      alert(msg);
-    });
+    // $("#enable").click(function(){
+    //   socket.emit('enable_validator');
+    // });
+    // socket.on('enable_validator', function(msg) {
+    //   alert(msg);
+    // });
 ////////////////////////////////////////////////////
 
 ////////////////////////////////////////////////////
