--- a/src/views/configuracion/remesa_hermes/vaciando.hbs
+++ b/src/views/configuracion/remesa_hermes/vaciando.hbs
@@ -27,9 +27,8 @@ function clear_message(){
     </div>
 
     <div class="remesa_hermes">
-      <div class="mensaje_centrado">Espere un momento estamos acomodando los billetes</div>
+      <div class="mensaje_centrado">Un momento Por Favor, Estamos acomodando los billetes en la bolsa</div>
     </div>
-
   </div>
   <div id="message">
     <ol></ol>
