--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -437,7 +437,7 @@ function borra_inicia(){
             <!-- <div class="btn interface_button" id='recibir_pago'><i class="fas fa-comment-dollar fa-4x"></i><br><div class="interface_label">Recibir un Pago</div></div> -->
             <!-- <div class="btn interface_button" id='cambio_moneda'><i class="fas fa-money-bill-alt fa-4x"></i><br><div class="interface_label">Cambio de Moneda</div></div> -->
             <!-- <div class="btn interface_button" id='ayuda'><i class="fas fa-info fa-4x"></i><br><div class="interface_label">Ayuda</div></div> -->
-              <div class="btn" id='force_serial'><i class="fas fa-random fa-4x"></i><br>force_serial</div>
+              <div class="btn" id='force_serial'><i class="fas fa-random fa-4x"></i><br>forzar fallo</div>
               <!-- <div id="abc"><i class="fas fa-wifi fa-2x"></i></div> -->
             <!-- <div class="anuncio"> -->
               <!-- <img src="img/logo_tambo.png" alt="Tambox" width="380" height="200"> -->
